--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,14 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.hibernate.orm:hibernate-core:6.1.0.Final'
 	implementation 'org.hibernate.validator:hibernate-validator:8.0.0.Final'
+//	implementation 'org.springframework:spring-web:6.0.10'
+//	implementation 'org.springframework:spring-webmvc:6.0.10'
+//	implementation 'org.springframework.boot:spring-boot-starter-tomcat:3.1.1'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+
+
+
 }
 
 tasks.named('test') {
