--- a/build.gradle
+++ b/build.gradle
@@ -21,21 +21,17 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.flywaydb:flyway-core'
+	testImplementation 'junit:junit:4.13.1'
+	testImplementation 'junit:junit:4.13.1'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.hibernate.orm:hibernate-core:6.1.0.Final'
 	implementation 'org.hibernate.validator:hibernate-validator:8.0.0.Final'
-//	implementation 'org.springframework:spring-web:6.0.10'
-//	implementation 'org.springframework:spring-webmvc:6.0.10'
-//	implementation 'org.springframework.boot:spring-boot-starter-tomcat:3.1.1'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-
-
-
-
 }
 
 tasks.named('test') {
